# CodeMachineGrader

./: .clang-format  Assembler.h  CMakeLists.txt  Cpu.h  ISA.h  Instruction.h  code.s  main.cpp  run.ps1
.github/workflows/: ci.yml
code_examples/: acc.s  code.s  ma.s  polyrisc.s
include/: Assembler.h  Cpu.h  ISA.h  architectures.h
include/Assembler/: Assembler.h  Assembler_ACC.h  Assembler_ACCLike.h  Assembler_Risc.h  Assembler_RiscLike.h  ProgramLayout.h  ProgramLayoutParser.h
include/Cpu/: Cpu.h  CpuTraits.h  Cpu_ACC.h  Cpu_ACCLike.h  Cpu_Risc.h  Cpu_RiscLike.h
include/ISA/: ACC_MA.h  PolyRisc.h
src/: main.cpp
tests/: CMakeLists.txt  test_ACC.cpp  test_MA.cpp  test_code.cpp  test_helpers.h  test_polyrisc.cpp
